--- a/index.html
+++ b/index.html
@@ -37,8 +37,7 @@ h3 {
               marketing next semester. I am working on my communications as a minor also.</p>
          <p>
             I am in Bob Jones University's golf team and often represent Bob Jones to addent tournaments.I really
-            enjoy playing sports and listen to musics.<a href="https://mobilehymns.org/">website</a> and post weekly service
-            schedules for several churches.
+            enjoy playing sports and listen to musics.
          </p> 
          <p>
            During my spare time usually I will reading books.
