--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@ h3 {
          <p>
            During my spare time usually I will reading books.
          </p>
-        <h3>EDUCATION</h3>
+        <h3>Business</h3>
         Business Administration<br />
         Bob Jones University
     </div>
